[gd_scene format=3 uid="uid://cov3jlrva1tvx"]

[ext_resource type="Script" uid="uid://ca8xdltgdyjys" path="res://Entities/Items/Weapons/ProjectileWeapons/ProjWeaponCore/ProjectileWeapon.gd" id="1_gx0sp"]
[ext_resource type="Shader" uid="uid://cugs1eqtkjsbd" path="res://Utilities/Game/Shaders/TintAndGlow.gdshader" id="2_j8r1b"]
[ext_resource type="Texture2D" uid="uid://bl6ixdtpvk8t8" path="res://Entities/Items/Weapons/ProjectileWeapons/Grizzly/GrizzlyBaseCT.tres" id="3_tbdd8"]
[ext_resource type="PackedScene" uid="uid://lw5fgm5pgoif" path="res://Entities/EntityCore/Sprites/EntityHandSprite.tscn" id="4_jefek"]
[ext_resource type="Texture2D" uid="uid://5jk6txxlb13i" path="res://Entities/Items/Weapons/ProjectileWeapons/Grizzly/GrizzlyBaseMagCT.tres" id="5_a0ptg"]
[ext_resource type="Texture2D" uid="uid://cybsl04in381e" path="res://Entities/Items/Weapons/ProjectileWeapons/Grizzly/GrizzlyBaseSpriteNoMagCT.tres" id="6_in4o7"]
[ext_resource type="PackedScene" uid="uid://bl0lw3ov85t2w" path="res://Entities/Components/ItemComponents/ClippingComponent/ClippingDetector.tscn" id="6_p2hrf"]
[ext_resource type="Texture2D" uid="uid://bli0i6fkxi43o" path="res://Entities/Player/PlayerCore/PlayerHandCT.tres" id="7_l7p33"]
[ext_resource type="PackedScene" uid="uid://wda4fiuxi8kh" path="res://Entities/Items/Weapons/WeaponVFX/FiringVFX/Simple/SimpleFiringVFX.tscn" id="8_4cr42"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_lnu1l"]
shader = ExtResource("2_j8r1b")

[sub_resource type="AtlasTexture" id="AtlasTexture_a0ptg"]
atlas = ExtResource("3_tbdd8")
region = Rect2(0, 0, 32, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_in4o7"]
atlas = ExtResource("3_tbdd8")
region = Rect2(32, 0, 32, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_l7p33"]
atlas = ExtResource("3_tbdd8")
region = Rect2(64, 0, 32, 14)

[sub_resource type="SpriteFrames" id="SpriteFrames_lnu1l"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a0ptg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_in4o7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l7p33")
}],
"loop": true,
"name": &"fire",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_tjfuh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ItemSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"fire"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ItemSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ItemSprite:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ItemSprite:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("ItemSprite:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("ReloadOffHand:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("ReloadOffHand:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(11, 3)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Mag:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-1, 3)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("GunNoMag:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Mag:visible")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("ItemSprite:visible")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("GunNoMag:position")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("ReloadMainHand:visible")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/13/type = "value"
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/path = NodePath("Mag:rotation")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/14/type = "value"
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/path = NodePath("Mag:self_modulate")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/15/type = "value"
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/path = NodePath("Mag:instance_shader_parameters/final_alpha")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/16/type = "value"
tracks/16/imported = false
tracks/16/enabled = true
tracks/16/path = NodePath("ReloadOffHand:rotation")
tracks/16/interp = 1
tracks/16/loop_wrap = true
tracks/16/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/17/type = "value"
tracks/17/imported = false
tracks/17/enabled = true
tracks/17/path = NodePath("ReloadMainHand:position")
tracks/17/interp = 1
tracks/17/loop_wrap = true
tracks/17/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-6, 4)]
}

[sub_resource type="Animation" id="Animation_ea614"]
resource_name = "fire"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ItemSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"fire"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ItemSprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.9, 1), Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ItemSprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-1.75, 0), Vector2(0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ItemSprite:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, -0.0872665, 0.0]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_eject_casing"
}]
}

[sub_resource type="Animation" id="Animation_w5kxq"]
resource_name = "mag_reload"
step = 0.025
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ReloadOffHand:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ReloadOffHand:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.15, 0.25, 0.3, 0.325, 0.45, 0.525, 0.6, 0.725, 0.775, 0.875, 0.95, 1),
"transitions": PackedFloat32Array(1, 1, 0.5, 1, 1, 1, 1, 2, 1, 1, 2, 1, 1),
"update": 0,
"values": [Vector2(11, 3), Vector2(0, 3), Vector2(0, 8), Vector2(0, 9), Vector2(2, 10), Vector2(3, 9), Vector2(0, 8), Vector2(0, 3), Vector2(2, -3), Vector2(2, -2), Vector2(-1, -2), Vector2(2, -2), Vector2(11, 3)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Mag:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.15, 0.25, 0.3, 0.375, 0.45, 0.525, 0.6, 0.65, 0.875, 0.925),
"transitions": PackedFloat32Array(1, 1, 0.5, 1, 1, 1, 1, 0, 0, 0, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 0), Vector2(0, 5), Vector2(0, 6), Vector2(6, 11), Vector2(3, 6), Vector2(0, 5), Vector2(0, -1), Vector2(0, 0), Vector2(-0.5, 0), Vector2(0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("GunNoMag:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Mag:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.375, 0.45),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("ItemSprite:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("GunNoMag:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.15, 0.2, 0.6, 0.65, 0.875, 0.925),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 0, 1),
"update": 1,
"values": [Vector2(0, 0), Vector2(0, 1), Vector2(0, 0), Vector2(0, -1), Vector2(0, 0), Vector2(-0.5, 0), Vector2(0, 0)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("ItemSprite:frame")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("ReloadMainHand:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Mag:rotation")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0.3, 0.375, 0.45),
"transitions": PackedFloat32Array(1, 0, 1),
"update": 0,
"values": [0.0, 0.785398, 0.0]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("Mag:self_modulate")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 0,
"values": []
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("ItemSprite:scale")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("Mag:instance_shader_parameters/final_alpha")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(0.3, 0.375, 0.45),
"transitions": PackedFloat32Array(1, 0, 1),
"update": 0,
"values": [1.0, 0.0, 1.0]
}
tracks/13/type = "value"
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/path = NodePath("ReloadOffHand:rotation")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/keys = {
"times": PackedFloat32Array(0, 0.25, 0.325, 0.375, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.0, 0.261799, 0.261799, 0.0]
}
tracks/14/type = "value"
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/path = NodePath("ItemSprite:position")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/15/type = "value"
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/path = NodePath("ItemSprite:rotation")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/16/type = "value"
tracks/16/imported = false
tracks/16/enabled = true
tracks/16/path = NodePath("ReloadMainHand:position")
tracks/16/interp = 1
tracks/16/loop_wrap = true
tracks/16/keys = {
"times": PackedFloat32Array(0, 0.15, 0.2, 0.6, 0.65, 0.875, 0.925),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2(-6, 4), Vector2(-6, 5), Vector2(-6, 4), Vector2(-6, 3), Vector2(-6, 4), Vector2(-6.5, 4), Vector2(-6, 4)]
}
tracks/17/type = "method"
tracks/17/imported = false
tracks/17/enabled = true
tracks/17/path = NodePath(".")
tracks/17/interp = 1
tracks/17/loop_wrap = true
tracks/17/keys = {
"times": PackedFloat32Array(0.15, 0.375, 0.575, 0.85),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"values": [{
"args": [0, false],
"method": &"play_reload_sound"
}, {
"args": [1, false],
"method": &"play_reload_sound"
}, {
"args": [2, false],
"method": &"play_reload_sound"
}, {
"args": [3, false],
"method": &"play_reload_sound"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_l7p33"]
_data = {
&"RESET": SubResource("Animation_tjfuh"),
&"fire": SubResource("Animation_ea614"),
&"mag_reload": SubResource("Animation_w5kxq")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ptxtg"]
shader = ExtResource("2_j8r1b")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_blwoc"]
shader = ExtResource("2_j8r1b")

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_0l645"]
radius = 3.0
height = 8.0

[node name="Grizzly" type="Node2D" node_paths=PackedStringArray("sprites_to_tint")]
script = ExtResource("1_gx0sp")
proj_origin = Vector2(12, -1)
sprites_to_tint = [NodePath("ItemSprite"), NodePath("Mag"), NodePath("GunNoMag")]

[node name="ItemSprite" type="AnimatedSprite2D" parent="."]
light_mask = 2
material = SubResource("ShaderMaterial_lnu1l")
sprite_frames = SubResource("SpriteFrames_lnu1l")
animation = &"fire"

[node name="OffHandSprite" parent="ItemSprite" instance=ExtResource("4_jefek")]
position = Vector2(11, 3)

[node name="MainHandSprite" parent="ItemSprite" instance=ExtResource("4_jefek")]
position = Vector2(-6, 4)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_l7p33")
}

[node name="ProjectileOrigin" type="Marker2D" parent="."]
position = Vector2(16, -1)

[node name="Mag" type="Sprite2D" parent="."]
visible = false
show_behind_parent = true
light_mask = 2
material = SubResource("ShaderMaterial_ptxtg")
instance_shader_parameters/final_alpha = 1.0
position = Vector2(-1, 3)
texture = ExtResource("5_a0ptg")

[node name="GunNoMag" type="Sprite2D" parent="."]
visible = false
show_behind_parent = true
light_mask = 2
material = SubResource("ShaderMaterial_blwoc")
texture = ExtResource("6_in4o7")

[node name="ReloadOffHand" parent="." instance=ExtResource("4_jefek")]
visible = false
position = Vector2(11, 3)
texture = ExtResource("7_l7p33")

[node name="ReloadMainHand" parent="." instance=ExtResource("4_jefek")]
visible = false
position = Vector2(-6, 4)
texture = ExtResource("7_l7p33")

[node name="ClippingDetector" parent="." instance=ExtResource("6_p2hrf")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ClippingDetector"]
position = Vector2(6, -1)
rotation = -1.5708
shape = SubResource("CapsuleShape2D_0l645")

[node name="CasingEjectionPoint" type="Marker2D" parent="."]
position = Vector2(-2, -2)

[node name="FiringVFX" parent="." instance=ExtResource("8_4cr42")]
position = Vector2(28, -1)
